[gd_scene load_steps=48 format=2]

[ext_resource path="res://Assets/animated_right-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/player_left.png" type="Texture" id=3]
[ext_resource path="res://Assets/no_hands_left-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/animated_left-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/no_hands_right-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/Overlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/player_right.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1260, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 180, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 360, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 540, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 720, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 900, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1080, 0, 180, 256 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1260, 0, 180, 256 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 38 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "IdleRight",
"speed": 0.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "Left",
"speed": 16.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "NoHandsIdleLeft",
"speed": 0.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "NoHandsIdleRight",
"speed": 0.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "NoHandsLeft",
"speed": 16.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "NoHandsRight",
"speed": 16.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "Right",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 32, 9.1 )

[sub_resource type="CapsuleShape2D" id=65]
radius = 31.2
height = 155.2

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Overlay" parent="." instance=ExtResource( 7 )]

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -122 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 18 )
animation = "NoHandsIdleLeft"

[node name="WallCollisions" type="CollisionShape2D" parent="."]
position = Vector2( 9.53674e-07, -6.1 )
scale = Vector2( 1.224, 1 )
shape = SubResource( 56 )

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 204

[node name="HitboxShape" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( 0, -109.6 )
shape = SubResource( 65 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 0, -121.6 )
current = true
zoom = Vector2( 1.5, 1.5 )

[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_area_entered"]
[connection signal="area_exited" from="PlayerHitbox" to="." method="_on_PlayerHitbox_area_exited"]
